<resources>
    <string name="app_name">YourFlavor</string>
    <string name="title_home">New</string>
    <string name="title_achievement">Achievement</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_appCollection">AppCollection</string>
    <string name="title_myCollection">MyCollection</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">Welcome to my World the world of Flavors</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

</resources>
