<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_appCollection"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:title="@string/title_appCollection" />

    <item
        android:id="@+id/navigation_myCollection"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_myCollection" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_achievement"
        android:icon="@drawable/ic_achievement_black_24dp"
        android:title="@string/title_achievement" />

</menu>
