<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_myCollection"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.yourflavor.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_appCollection"
        android:name="com.example.yourflavor.ui.appCollection.AppCollectionFragment"
        android:label="@string/title_appCollection"
        tools:layout="@layout/fragment_appcollection" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.yourflavor.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_achievement"
        android:name="com.example.yourflavor.ui.achievement.AchievementFragment"
        android:label="@string/title_achievement"
        tools:layout="@layout/fragment_achievement" />
    <fragment
        android:id="@+id/navigation_myCollection"
        android:name="com.example.yourflavor.ui.myCollection.MyCollectionFragment"
        android:label="@string/title_myCollection"
        tools:layout="@layout/fragment_mycollection" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.yourflavor.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>
