<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="@string/login"
        android:paddingVertical="35dp"
        android:textAlignment="center"
        android:textSize="60sp"
        android:fontFamily="cursive"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/password"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_btn"
        android:onClick="movePage"
        android:text="@string/login" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account_yet_create_one"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />
</LinearLayout>